--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <div id="app"></div>
+    ${ require('pages/home.html') }
 
     <script src="/manifest.js"></script>
     <script src="/vendor.js"></script>
